--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
+.wrapper{
+  background: linear-gradient(rgba(0, 0, 0, .8), rgba(0, 0, 0, .7)), url('./assets/cr.jpg');
+  height: 100vh;
+background-position: center;
+background-size: cover; 
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button{
+  padding: 7px 14px;
+  font-size: 1.2rem;
+  color: #fff;
+  font-weight: 600;
+  text-transform: uppercase;
+  border: 1px solid rgb(249, 168, 168);
+  border-radius: 4px;
+  cursor: pointer;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button:hover{ 
+  background:white;
+  color: black;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.centered{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  align-items: center;
 }
