--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .wrapper{
-  background: linear-gradient(rgba(0, 0, 0, .8), rgba(0, 0, 0, .7)), url('./assets/cr.jpg');
+  background: linear-gradient(rgba(0, 0, 0, .8), rgba(0, 0, 0, .7)), url('./assets/bgnew.jpg');
   height: 100vh;
 background-position: center;
 background-size: cover; 
